--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
     compile "com.google.dagger:dagger-android:${daggerVersion}"
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${daggerVersion}"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+    compile 'com.birbit:android-priority-jobqueue:2.0.1'
     testCompile 'junit:junit:4.12'
 }
